@@ -38,7 +38,7 @@ public class JwtAuthorizationFilter extends OncePerRequestFilter {
         try{
             if (req.getHeader(JwtUtil.AUTHORIZATION_HEADER) == null)
                 throw new CustomException(ErrorCode.NOT_FOUND_TOKEN);
-            String token = URLDecoder.decode(req.getHeader(JwtUtil.AUTHORIZATION_HEADER), StandardCharsets.UTF_8);
+            String token = URLDecoder.decode(req.getHeader(JwtUtil.AUTHORIZATION_HEADER), "UTF-8");
 
             if (StringUtils.hasText(token)) {
 
